# jupiter-rewards

./: .gitignore  .prettierignore  Anchor.toml  Cargo.toml  README.md  build.sh  package-lock.json  package.json  setup.sh  tsconfig.json  types.d.ts
assets/: README.md  jupiter-rewards-metadata.json
programs/jupiter-rewards/: Cargo.toml
programs/jupiter-rewards/src/: lib.rs
scripts/: create-placeholder-logo.js  create-token.ts  deploy.ts  get-token-mint.js  initialize-program.ts  swap-and-distribute.ts  update-token-metadata.ts
src/: lib.rs
tests/: jupiter-rewards-new.ts  jupiter-rewards.ts
