[package]
name = "jupiter-rewards"
version = "0.1.0"
description = "Jupiter Rewards Distribution System"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "jupiter_rewards"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = { version = "0.28.0", features = ["token", "token_2022"] }
solana-program = "=1.16.3"
spl-token = { version = "=3.5.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "=0.6.1", features = ["no-entrypoint"] }
spl-token-metadata-interface = "=0.2.0"
spl-memo = "=4.0.0"
